testsuite/tests/typecheck/should_fail/tcfail143.stderr
tcfail143.hs:30:9: error: [GHC-39999]
    • No instance for ‘MinMax (S Z) Z Z Z’
        arising from a use of ‘extend’
    • In the expression: n1 `extend` n0
      In an equation for ‘t2’: t2 = n1 `extend` n0

